fixed main menu behaviour on smaller horizontal screen size

--- a/theme.scss
+++ b/theme.scss
@@ -281,20 +281,24 @@ div#mysearches {
   }
 }
 
-#showtask {
-  position: absolute;
-  top: 84px;
-  right: 10px;
-  
+#pmcontrol{
+  float: right !important;
+  padding-right: 20px;
+}
+
+#pmcontrol div{
+  @include inline-block;
+}
+
+#showtask {  
   #taskid{
     width: 50px;
   }
 }
 
 #projectselector {
-	float:right;
-  margin-right: 180px;
   margin-top: 3px;
+  margin-right: 10px;
 
   button {
     margin-bottom:2px;
@@ -306,8 +310,6 @@ div#mysearches {
 }
 
 #pm-menu {
-	/*margin: -57px 0 0;*/
-	/*padding: 2px 0 1px 0.5em;*/
   height: 40px;
   position: absolute;
   top: 81px;
